changed logos and Umar's bio

--- a/index.html
+++ b/index.html
@@ -175,7 +175,12 @@
         </li>
         <li>
           <a>
-            <img class="partner-logo" src="/images/logos/clients/color/sensible4.svg">
+            <img class="partner-logo" src="/images/logos/clients/color/intrinsic.svg">
+          </a>
+        </li>
+        <li>
+          <a>
+            <img class="partner-logo" src="/images/logos/clients/color/cevt.svg">
           </a>
         </li>
         <li>
@@ -455,7 +460,7 @@
         <div class="column is-6">
           <figure class="biographies">
             <blockquote>
-              A PhD holder, Umar Zakir Abdul Hamid has been working in the autonomous vehicle field since 2014 with various teams in different countries (Malaysia, Singapore, Japan, Finland). He is now the Team Lead of the Autonomous Vehicle Planning and Control Algorithm Development at Sensible 4 Oy, Finland - leading a team of 12 engineers. Umar Zakir is an active member of several Society of Automotive Engineers (SAE) Task Forces, focusing on the autonomous vehicle active safety topics. He is also one of the recipients for the Finnish Engineering Award 2020 for his contributions to the development of all-weather autonomous driving solution with Sensible 4.
+              A PhD holder, Umar has been working in the future mobility (connected and autonomous vehicle) field since 2014 with various teams in different countries and continents. Previously, he led a team of 12 engineers (of 10 different nationalities) working in the Autonomous Vehicle Software Product Development with Sensible 4, Finland. Umar is one of the recipients of the Finnish Engineering Award 2020 for his contributions to the development of all weather autonomous driving solutions with the said firm. With more than 30 scientific publications as author and editor under his belt, Umar actively participates in global automotive standardization efforts where he is a Secretary for a Society Automotive Engineers (SAE) Committee. Since the end of Summer 2021, Umar has been working as the Lead of Strategic Planning for CEVT AB in Sweden.
             </blockquote>
             <div class="author">
               <img src="/images/illustrations/faces/umar.png" alt=""/>
