add deadline extension and speaker

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
       <div class="columns is-vcentered">
 	
 	
-	<div class=column&#32;is-6>
+	<div class=column&#32;is-4>
           <figure class="testimonial">
             <blockquote>
               TBD
@@ -302,7 +302,7 @@
           </figure>
         </div>
 	
-	<div class=column&#32;is-6>
+	<div class=column&#32;is-4>
           <figure class="testimonial">
             <blockquote>
               TBD
@@ -315,6 +315,19 @@
           </figure>
         </div>
 	
+	<div class=column&#32;is-4>
+          <figure class="testimonial">
+            <blockquote>
+              TBD
+            </blockquote>
+            <div class="author">
+              <img src="/images/illustrations/faces/3.png" alt=""/>
+              <h5>Colin de Vrieze</h5>
+	      <span>Head of Application Engineering Europe<br><a href="https://www.appliedintuition.com/" target="_blank">Applied Intuition</a></span>
+            </div>
+          </figure>
+        </div>
+	 
       </div>
       <div class="columns is-vcentered">
       </div>
@@ -345,7 +358,7 @@
               <p>
                 <span class="icon-box-title">Submission Deadline</span>
 
-                <span class="icon-box-text">March 8th, 2022 <br>Submission through <a href="https://its.papercept.net/conferences/scripts/start.pl" target="_blank">PaperPlaza</a> <br>Submission code: <strong>10101</strong></span>
+                <span class="icon-box-text">March 15th, 2022 <br>Submission through <a href="https://its.papercept.net/conferences/scripts/start.pl" target="_blank">PaperPlaza</a> <br>Submission code: <strong>10101</strong></span>
               </p>
             </div>
           </div>
