--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </h1>
         
         <h2 class="subtitle is-5 is-muted">
-          A workshop being held in conjunction with the<br><strong><a href="https://iv2022.com/" target="_blank">IEEE Intelligent Vehicles Symposium - IV2022</a>,</strong> June 5th, 2022, Aachen, Germany. <br>Room E113, ika, RWTH Aachen University (morning session)<br><strong><a href="https://iv2022.com/workshop-registration/" target="_blank">Workshop registration</a></strong>
+          A workshop being held in conjunction with the<br><strong><a href="https://iv2022.com/" target="_blank">IEEE Intelligent Vehicles Symposium - IV2022</a>,</strong> June 5th, 2022, Aachen, Germany. <br><strong><a href="https://www.eurogress-aachen.de/en/eurogress-aachen/conference-room-9" target="_blank">Room K9, Eurogress</a></strong> (morning session)<br><strong><a href="https://iv2022.com/workshop-registration/" target="_blank">Workshop registration</a></strong>
         </h2>
         
         <p>
@@ -292,10 +292,12 @@
       <div class="columns is-vcentered">
 	
 	
+	
+	
 	<div class=column&#32;is-4>
           <figure class="testimonial">
             <blockquote>
-              ROAD - The ROad event Awareness Dataset for autonomous Driving
+              <p style="font-size:16px"> ROAD - The ROad event Awareness Dataset for autonomous Driving </p>
             </blockquote>
             <div class="author">
               <img src="/images/illustrations/faces/fabio.png" style="width:120px;height:120px;" alt=""/>
@@ -305,10 +307,12 @@
           </figure>
         </div>
 	
+	
+	
 	<div class=column&#32;is-4>
           <figure class="testimonial">
             <blockquote>
-              Localization and Mapping Technology Under the Hood of World&#39;s First &#34;Driver out&#34; Fully Autonomous Semi-Truck
+              <p style="font-size:16px"> Localization and Mapping Technology Under the Hood of World&#39;s First &#34;Driver out&#34; Fully Autonomous Semi-Truck </p>
             </blockquote>
             <div class="author">
               <img src="/images/illustrations/faces/song.png" style="width:120px;height:120px;" alt=""/>
@@ -318,10 +322,12 @@
           </figure>
         </div>
 	
+	
+	
 	<div class=column&#32;is-4>
           <figure class="testimonial">
             <blockquote>
-              Methods for Map Validation for Autonomy Applications in the Real World
+              <p style="font-size:16px"> Methods for Map Validation for Autonomy Applications in the Real World </p>
             </blockquote>
             <div class="author">
               <img src="/images/illustrations/faces/Yousef.png" style="width:120px;height:120px;" alt=""/>
@@ -464,89 +470,89 @@
 	  <th>Type</th>
 	</tr>
 	<tr>
-	  <td>9:00</td>
+	  <td>08:30</td>
 	  <td>-</td>
-	  <td>9:10</td>
+	  <td></td>
 	  <td>Program Starts</td>
 	  <td></td>
 	  <td></td>
 	</tr>
 	<tr style="background-color: #d3f0fa">
-	  <td>9:10</td>
+	  <td>08:30</td>
 	  <td>-</td>
-	  <td>9:30</td>
+	  <td>08:40</td>
 	  <td>Introduction by Organizers</td>
 	  <td>Angelo Cenedese, Umar Zakir Abdul Hamid, Luca Parolini, Christopher Plachetka, Sebastian Schneider, Oliver Wasenmüller, Roberto G. Valenti, Jenny Yuan</td>
 	  <td></td>
 	</tr>
 	<tr style="background-color: #fbfbfb">
-	  <td>9:30</td>
+	  <td>08:50</td>
 	  <td>-</td>
-	  <td>10:00</td>
+	  <td>09:20</td>
 	  <td>Localization and Mapping Technology Under the Hood of World's First "Driver out" Fully Autonomous Semi-Truck</td>
 	  <td>Dr. Shiyu Song</td>
 	  <td>Invited Talk</td>
 	</tr>
 	<tr style="background-color: #fbfbfb">
-	  <td>10:00</td>
+	  <td>09:20</td>
 	  <td>-</td>
-	  <td>10:15</td>
+	  <td>09:30</td>
 	  <td>Q&A Session 1</td>
 	  <td></td>
 	  <td></td>
 	</tr>
 	<tr style="background-color: #d3f0fa">
-	  <td>10:15</td>
+	  <td>09:30</td>
 	  <td>-</td>
-	  <td>10:45</td>
+	  <td>10:00</td>
 	  <td>ROAD - The ROad event Awareness Dataset for autonomous Driving</td>
 	  <td>Prof. Fabio Cuzzolin</td>
 	  <td>Invited Talk</td>
 	</tr>
 	<tr style="background-color: #d3f0fa">
-	  <td>10:45</td>
+	  <td>10:00</td>
 	  <td>-</td>
-	  <td>11:00</td>
+	  <td>10:10</td>
 	  <td>Q&A Session 2</td>
 	  <td></td>
 	  <td></td>
 	</tr>
 	<tr style="background-color: #fbfbfb">
-	  <td>11:00</td>
+	  <td>10:30</td>
 	  <td>-</td>
-	  <td>11:25</td>
+	  <td>10:55</td>
 	  <td>An Hybrid Approach to Improve the Performance of Encoder-Decoder Architectures for Traversability Analysis in Urban Environments</td>
 	  <td>Daniel Fusaro, Emilio Olivastri, Daniele Evangelista, Pietro Iob, Alberto Pretto</td>
 	  <td>Paper</td>
 	</tr>
 	<tr style="background-color: #fbfbfb">
-	  <td>11:25</td>
+	  <td>10:55</td>
 	  <td>-</td>
-	  <td>11:30</td>
+	  <td>11:00</td>
 	  <td>Q&A Session 3</td>
 	  <td></td>
 	  <td></td>
 	</tr>
 	<tr style="background-color: #d3f0fa">
-	  <td>11:30</td>
+	  <td>11:00</td>
 	  <td>-</td>
-	  <td>12:00</td>
+	  <td>11:30</td>
 	  <td>Methods for Map Validation for Autonomy Applications in the Real World</td>
 	  <td>Dr. Yousef Hindy</td>
 	  <td>Invited Talk</td>
 	</tr>
 	<tr style="background-color: #d3f0fa">
-	  <td>12:00</td>
+	  <td>11:30</td>
 	  <td>-</td>
-	  <td>12:15</td>
+	  <td>11:40</td>
 	  <td>Q&A Session 4</td>
 	  <td></td>
 	  <td></td>
 	</tr>
 	<tr>
-	  <td>12:15</td>
+	  <td>11:45</td>
 	  <td>-</td>
-	  <td>12:30</td>
+	  <td>12:00</td>
 	  <td>Closing Remarks</td>
 	  <td>Angelo Cenedese, Umar Zakir Abdul Hamid, Luca Parolini, Christopher Plachetka, Sebastian Schneider, Oliver Wasenmüller, Roberto G. Valenti, Jenny Yuan</td>
 	  <td></td>
